# bawbel-scanner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: commands.md  contributing.md  dev-workflow.md  security.md  testing.md
.claude/skills/: add-detection-rule.md  add-engine.md  security-review.md  write-test.md
.github/workflows/: ci.yml  pr-review.yml
docs/: README.md
docs/api/: scan.md
docs/guides/: docker.md  getting-started.md  writing-rules.md
scanner/: __init__.py  messages.py  scanner.py  utils.py
scanner/engines/: __init__.py  llm_engine.py  pattern.py  sandbox_engine.py  semgrep_engine.py  yara_engine.py
scanner/models/: finding.py  result.py
tests/: test_scanner.py
