[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bawbel-scanner"
version = "0.1.0"
description = "Agentic AI component security scanner — detects AVE vulnerabilities"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Bawbel", email = "bawbel.io@gmail.com" }
]
keywords = ["security", "ai", "scanner", "ave", "agentic", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
yara = ["yara-python>=4.5.0"]
semgrep = ["semgrep>=1.60.0"]
llm = ["litellm>=1.30.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.4.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=24.0.0",
    "flake8-bandit>=4.1.0",
    "bandit>=1.7.8",
    "pre-commit>=3.7.0",
    "pip-audit>=2.7.0",
]
all = [
    "yara-python>=4.5.0",
    "semgrep>=1.60.0",
    "litellm>=1.30.0",
]

[project.urls]
Homepage = "https://bawbel.io"
Documentation = "https://bawbel.io/docs"
Repository = "https://github.com/bawbel/bawbel-scanner"
"Bug Tracker" = "https://github.com/bawbel/bawbel-scanner/issues"
"AVE Standard" = "https://github.com/bawbel/bawbel-ave"

[project.scripts]
bawbel = "cli:main"

# ── Tool configuration ────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: unit tests (fast, no external deps)",
    "integration: integration tests (may require semgrep/yara)",
    "slow: slow tests (sandbox, LLM)",
]

[tool.coverage.run]
source = ["scanner", "config"]
omit = ["tests/*", ".venv/*", "config/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "except ImportError:",
    "except Exception:",
    "pass  # .*not installed",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", "build", "dist"]
skips = [
    "B101",  # assert used in tests
    "B404",  # subprocess import — we know, it's intentional
    "B603",  # subprocess without shell — we always use lists
]
severity = "medium"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "E501"]
exclude = [".venv", "build", "dist", "__pycache__"]
per-file-ignores = [
    "tests/*:S101",  # allow assert in tests
]
